--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -26,8 +26,8 @@
     {{#if this.crate.mailing_list}}
       <li><a href="{{this.crate.mailing_list}}">Mailing list</a></li>
     {{/if}}
-    {{#if this.documentationLink}}
-      <li><a href="{{this.documentationLink}}" data-test-docs-link>Documentation</a></li>
+    {{#if this.currentVersion.documentationLink}}
+      <li><a href="{{this.currentVersion.documentationLink}}" data-test-docs-link>Documentation</a></li>
     {{/if}}
     {{#if this.crate.repository}}
       <li><a href="{{this.crate.repository}}">Repository</a></li>
