--- a/app/components/crate-sidebar.hbs
+++ b/app/components/crate-sidebar.hbs
@@ -127,6 +127,10 @@
           {{/if}}
         {{/each}}
       </ul>
+
+      <LinkTo @route="crate.reverse-dependencies" local-class="reverse-deps-link" data-test-reverse-deps-link>
+        Show dependent crates
+      </LinkTo>
     </div>
 
     {{#if @version.buildDependencies}}
