CrateSidebar: Avoid identical homepage and repository links

--- a/app/components/crate-sidebar.hbs
+++ b/app/components/crate-sidebar.hbs
@@ -39,7 +39,7 @@
     </div>
 
     <div>
-      {{#if @crate.homepage}}
+      {{#if (and @crate.homepage (not-eq @crate.repository @crate.homepage))}}
         <h3>Homepage</h3>
         <a href="{{@crate.homepage}}">
           {{@crate.homepage}}
