CrateSidebar::Link: Strip `https://` prefix

--- a/app/components/crate-sidebar/link.hbs
+++ b/app/components/crate-sidebar/link.hbs
@@ -1,6 +1,6 @@
 <div ...attributes>
   <h3 data-test-title>{{@title}}</h3>
   <a href={{@url}} data-test-link>
-    {{@url}}
+    {{this.text}}
   </a>
 </div>
