--- a/app/components/crate-sidebar/link.hbs
+++ b/app/components/crate-sidebar/link.hbs
@@ -1,7 +1,11 @@
 <div ...attributes>
   <h3 data-test-title>{{@title}}</h3>
   <div local-class="content">
-    {{svg-jar "link" local-class="icon" data-test-icon="link"}}
+    {{#if this.isGitHub}}
+      {{svg-jar "GitHub-Mark" local-class="icon" data-test-icon="github"}}
+    {{else}}
+      {{svg-jar "link" local-class="icon" data-test-icon="link"}}
+    {{/if}}
 
     <a href={{@url}} data-test-link>
       {{this.text}}
