CrateSidebar::Link: Display docs.rs icon if link goes to docs.rs

--- a/app/components/crate-sidebar/link.hbs
+++ b/app/components/crate-sidebar/link.hbs
@@ -1,7 +1,9 @@
 <div ...attributes>
   <h3 data-test-title>{{@title}}</h3>
   <div local-class="content">
-    {{#if this.isGitHub}}
+    {{#if this.isDocsRs}}
+      {{svg-jar "docs-rs" local-class="icon" data-test-icon="docs-rs"}}
+    {{else if this.isGitHub}}
       {{svg-jar "GitHub-Mark" local-class="icon" data-test-icon="github"}}
     {{else}}
       {{svg-jar "link" local-class="icon" data-test-icon="link"}}
