RenderedHtml: Remove outer margins from rendered text
This makes it easier to properly align the component with other elements on the page

--- a/app/components/rendered-html.module.css
+++ b/app/components/rendered-html.module.css
@@ -2,6 +2,14 @@
     line-height: 1.5;
     overflow-wrap: break-word;
 
+    > :first-child {
+        margin-top: 0;
+    }
+
+    > :last-child {
+        margin-bottom: 0;
+    }
+
     img {
         max-width: 100%;
     }
