styles: Use numeric darkness instead of "dark, darker, darkest, ..."

--- a/app/components/header.module.css
+++ b/app/components/header.module.css
@@ -62,7 +62,7 @@ input.search {
 
     &:focus {
         outline: none;
-        box-shadow: 0 0 0 4px var(--yellow);
+        box-shadow: 0 0 0 4px var(--yellow500);
     }
 }
 
