crate.version: Add `CrateHeader` component

--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -1,3 +1,5 @@
+<CrateHeader @crate={{this.model}} />
+
 <LinkTo @route="crate" @model={{this.model}} local-class="back-link">&#11013; Back to Main Page</LinkTo>
 
 <span local-class="page-description" data-test-page-description>
