Extract `VersionList::Row` component

--- a/app/templates/crate/versions.hbs
+++ b/app/templates/crate/versions.hbs
@@ -10,22 +10,6 @@
 
 <div local-class="list">
   {{#each this.model.versions as |version|}}
-    <div local-class="row">
-      <div>
-        <LinkTo @route="crate.version" @model={{version.num}}>{{ version.num }}</LinkTo>
-
-        <span local-class="date">{{date-format version.created_at 'PPP'}}</span>
-        {{#if version.yanked}}
-          <span local-class='yanked'>yanked</span>
-        {{/if}}
-      </div>
-      {{#if this.isOwner}}
-        <YankButton @version={{version}} />
-      {{else}}
-        <LinkTo @route="crate.version" @model={{version.num}} local-class="arrow">
-          {{svg-jar "right-arrow"}}
-        </LinkTo>
-      {{/if}}
-    </div>
+    <VersionList::Row @version={{version}} local-class="row" />
   {{/each}}
 </div>
