--- a/app/components/version-list/row.module.css
+++ b/app/components/version-list/row.module.css
@@ -2,7 +2,25 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 20px 0;
+    position: relative;
+    padding: 20px;
+    transition: background-color 300ms;
+
+    &:hover {
+        background-color: var(--grey200);
+        transition: background-color 0ms;
+    }
+}
+
+.num-link {
+    &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom: 0;
+    }
 }
 
 .date {
@@ -15,11 +33,6 @@
     composes: yanked from '../../styles/shared/typography.module.css';
 }
 
-.arrow {
-    display: inline-block;
-    float: right;
-
-    svg {
-        background: #EEECDD;
-    }
+.yank-button {
+    position: relative;
 }
