--- a/app/components/version-list/row.hbs
+++ b/app/components/version-list/row.hbs
@@ -13,7 +13,9 @@
     {{/if}}
   </div>
 
-  <span local-class="date">{{date-format @version.created_at 'PPP'}}</span>
+  <span title={{date-format @version.created_at 'PPP'}} local-class="date">
+    {{date-format-distance-to-now @version.created_at addSuffix=true}}
+  </span>
 
   {{#if this.isOwner}}
     <YankButton @version={{@version}} local-class="yank-button" />
