--- a/app/components/version-list/row.hbs
+++ b/app/components/version-list/row.hbs
@@ -9,7 +9,7 @@
     </LinkTo>
 
     {{#if @version.yanked}}
-      <span local-class='yanked'>yanked</span>
+      <span local-class="yanked-label">yanked</span>
     {{/if}}
   </div>
 
