--- a/app/components/version-list/row.module.css
+++ b/app/components/version-list/row.module.css
@@ -35,7 +35,7 @@
     position: relative;
 }
 
-.yanked {
+.yanked-label {
     composes: yanked from '../../styles/shared/typography.module.css';
 }
 
