--- a/app/styles/application.module.css
+++ b/app/styles/application.module.css
@@ -1,6 +1,7 @@
 :root {
     --violet800: hsl(252, 44%, 24%);
     --grey900: hsl(200, 15%, 19%);
+    --grey700: hsl(200, 11%, 43%);
     --grey200: hsl(200, 17%, 96%);
     --green800: hsl(115, 31%, 31%);
     --yellow500: hsl(44, 100%, 60%);
