--- a/app/components/version-list/row.module.css
+++ b/app/components/version-list/row.module.css
@@ -52,7 +52,12 @@
 }
 
 .num-link {
+    color: var(--fg-color);
     font-variant-numeric: tabular-nums;
+
+    &:hover {
+        color: var(--fg-color);
+    }
 
     &::after {
         content: '';
