--- a/app/styles/application.module.css
+++ b/app/styles/application.module.css
@@ -2,6 +2,7 @@
     --violet800: hsl(252, 44%, 24%);
     --grey900: hsl(200, 15%, 19%);
     --grey700: hsl(200, 11%, 43%);
+    --grey600: hsl(200, 13%, 60%);
     --grey200: hsl(200, 17%, 96%);
     --green800: hsl(115, 31%, 31%);
     --yellow500: hsl(44, 100%, 60%);
