--- a/app/components/version-list/row.module.css
+++ b/app/components/version-list/row.module.css
@@ -42,6 +42,7 @@
     height: 3em;
     margin-right: 20px;
     font-weight: 500;
+    font-variant-numeric: tabular-nums;
     color: var(--fg-color);
     background-color: var(--bg-color);
     border: 2px solid white;
