--- a/app/components/version-list/row.hbs
+++ b/app/components/version-list/row.hbs
@@ -24,6 +24,16 @@
       {{@version.num}}
     </LinkTo>
 
+    {{#if @version.published_by}}
+      <span local-class="publisher">
+        by
+        <LinkTo @route="user" @model={{@version.published_by.login}}>
+          <UserAvatar @user={{@version.published_by}} local-class="avatar" />
+          {{@version.published_by.name}}
+        </LinkTo>
+      </span>
+    {{/if}}
+
     <span title={{date-format @version.created_at 'PPP'}} local-class="date">
       {{date-format-distance-to-now @version.created_at addSuffix=true}}
     </span>
