--- a/app/components/version-list/row.module.css
+++ b/app/components/version-list/row.module.css
@@ -7,6 +7,9 @@
     position: relative;
     font-size: 18px;
     padding: 15px 25px;
+    background-color: white;
+    border-radius: 7px;
+    box-shadow: 0 1px 3px hsla(0, 0%, 0%, .2);
     transition: background-color 300ms;
 
     &:hover {
