--- a/app/styles/crate/versions.module.css
+++ b/app/styles/crate/versions.module.css
@@ -7,20 +7,13 @@
 }
 
 .list {
-    margin-top: 10px;
-    padding: 0 20px;
-    background-color: white;
     list-style: none;
+    margin: 10px 0 0;
+    padding: 0;
 
-    > li {
-        border-bottom: 2px solid #d5d3cb;
-
-        &:last-of-type {
-            border: none;
+    li {
+        &:not(:first-child) {
+            margin-top: 10px;
         }
     }
-}
-
-.row {
-    margin: 0 -20px;
 }
