--- a/app/components/crate-sidebar.hbs
+++ b/app/components/crate-sidebar.hbs
@@ -24,16 +24,16 @@
       <p local-class="copy-help">Add the following line to your Cargo.toml file:</p>
       {{#if (is-clipboard-supported)}}
         <CopyButton
-          @copyText='{{@crate.name}} = "{{@version.num}}"'
+          @copyText={{this.tomlSnippet}}
           title="Copy Cargo.toml snippet to clipboard"
           local-class="copy-button"
         >
-          <span>{{@crate.name}} = "{{@version.num}}"</span>
+          <span>{{this.tomlSnippet}}</span>
           {{svg-jar "copy" aria-hidden="true" local-class="copy-icon"}}
         </CopyButton>
       {{else}}
         <code local-class="copy-fallback">
-          {{@crate.name}} = "{{@version.num}}"
+          {{this.tomlSnippet}}
         </code>
       {{/if}}
     </div>
